--- a/wbib/Gemfile
+++ b/wbib/Gemfile
@@ -43,5 +43,8 @@ group :development do
 
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
+  gem 'quiet_assets', group: :development
+  gem 'better_errors', group: :development
+  gem 'binding_of_caller', group: :development
 end
 
