Fixed gems and spelling

--- a/wbib/Gemfile
+++ b/wbib/Gemfile
@@ -1,5 +1,6 @@
 source 'https://rubygems.org'
 
+gem "validate_url"
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.4'
@@ -46,5 +47,6 @@ group :development do
   gem 'quiet_assets', group: :development
   gem 'better_errors', group: :development
   gem 'binding_of_caller', group: :development
+
 end
 
