--- a/img/Gemfile
+++ b/img/Gemfile
@@ -2,6 +2,10 @@ source 'https://rubygems.org'
 
 gem 'devise'
 
+gem 'quiet_assets', group: :development
+gem 'better_errors', group: :development
+gem 'binding_of_caller', group: :development
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.4'
 # Use sqlite3 as the database for Active Record
